--- a/index.html
+++ b/index.html
@@ -5,45 +5,49 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="noindex, nofollow" name="robots">
-    <meta content="IE=9" http-equiv="X-UA-Compatible" />
+    <meta content="IE=9" http-equiv="X-UA-Compatible"/>
     <title>Photo App</title>
-    <link href="styles.css" rel="stylesheet" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet"/>
+    <link crossorigin="anonymous" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+          integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+          referrerpolicy="no-referrer" rel="stylesheet"
+    />
 </head>
 
 <body>
-    <nav>
-        <h1>Photo App</h1>
-        <ul>
-            <li>username</li>
-            <li><a href="#">Sign out</a></li>
-        </ul>
-    </nav>
-    <main>
+<nav>
+    <h1>Photo App</h1>
+    <div class=userControlPannel>
+        <a>username</a>
+        <a><a href="#">Sign out</a></a>
+    </div>
+</nav>
+<div class="page-wrap">
+    <div class="mainPanel">
         <div class="storyList">
             <div class="story">
                 <img alt="BillGates Avatar"
-                    src="https://static01.nyt.com/images/2020/11/20/multimedia/00Gates-1/00Gates-1-mediumSquareAt3X.jpg">
+                     src="https://static01.nyt.com/images/2020/11/20/multimedia/00Gates-1/00Gates-1-mediumSquareAt3X.jpg">
                 <p>BillGates</p>
             </div>
             <div class="story">
                 <img alt="KevinSystrom Avatar"
-                    src="https://pbs.twimg.com/profile_images/982345946263515142/k_4l7LHR_400x400.jpg">
+                     src="https://pbs.twimg.com/profile_images/982345946263515142/k_4l7LHR_400x400.jpg">
                 <p>KevinSystrom</p>
             </div>
             <div class="story">
                 <img alt="TimCook Avatar"
-                    src="https://www.looktothestars.org/photo/12957-tim-cook/story_half_width.jpg">
+                     src="https://www.looktothestars.org/photo/12957-tim-cook/story_half_width.jpg">
                 <p>TimCook</p>
             </div>
             <div class="story">
                 <img alt="ElonMusk Avatar"
-                    src="https://pyxis.nymag.com/v1/imgs/15a/a77/b92f3a2d6de4ac79f869b4ab5300da4c8c-elon-musk.rsquare.w1200.jpg">
+                     src="https://pyxis.nymag.com/v1/imgs/15a/a77/b92f3a2d6de4ac79f869b4ab5300da4c8c-elon-musk.rsquare.w1200.jpg">
                 <p>ElonMusk</p>
             </div>
             <div class="story">
                 <img alt="MarkZuck Avatar"
-                    src="https://www.biography.com/.image/t_share/MTQyMDA0NDgwMzUzNzcyNjA2/mark-zuckerberg_gettyimages-512304736jpg.jpg">
+                     src="https://www.biography.com/.image/t_share/MTQyMDA0NDgwMzUzNzcyNjA2/mark-zuckerberg_gettyimages-512304736jpg.jpg">
                 <p>MarkZuck</p>
             </div>
         </div>
@@ -56,7 +60,7 @@
                         </a>
                     </h2>
                 </div>
-                <img alt="picture of nature" src="https://picsum.photos/id/10/360/260" />
+                <img alt="picture of nature" src="https://picsum.photos/id/10/360/260"/>
                 <div>
                     <p>
                         <a class="far fa-heart invisibleLink" href="#"></a>
@@ -67,16 +71,14 @@
                     <p class="likesCount">30 likes</p>
                     <p>
                         <span class="username">gibsonjack</span> Here is a caption about the photo. Lorem ipsum dolor
-                        sit
-                        amet, cu soluta concludaturque vim, summo voluptatibus ex sea...
+                        sit amet, cu soluta concludaturque vim, summo voluptatibus ex sea...
                         <a href="#">more</a>
                     </p>
                     <div class="comments">
                         <p><span class="username">lizzie</span> Here is a caption about the photo. Lorem ipsum dolor sit
                             amet, cu soluta concludaturque vim, summo voluptatibus ex sea.</p>
                         <p><span class="username">vanek97</span> Here is a caption about the photo. Lorem ipsum dolor
-                            sit
-                            amet, cu soluta concludaturque vim, summo voluptatibus ex sea.</p>
+                            sit amet, cu soluta concludaturque vim, summo voluptatibus ex sea.</p>
                         <p><span class="comment_time">1 DAY AGO</span></p>
                     </div>
                 </div>
@@ -97,7 +99,7 @@
                         </a>
                     </h2>
                 </div>
-                <img alt="picture of nature" src="https://picsum.photos/id/10/360/260" />
+                <img alt="picture of nature" src="https://picsum.photos/id/10/360/260"/>
                 <div>
                     <p>
                         <a class="far fa-heart invisibleLink" href="#"></a>
@@ -108,16 +110,14 @@
                     <p class="likesCount">30 likes</p>
                     <p>
                         <span class="username">gibsonjack</span> Here is a caption about the photo. Lorem ipsum dolor
-                        sit
-                        amet, cu soluta concludaturque vim, summo voluptatibus ex sea...
+                        sit amet, cu soluta concludaturque vim, summo voluptatibus ex sea...
                         <a href="#">more</a>
                     </p>
                     <div class="comments">
                         <p><span class="username">lizzie</span> Here is a caption about the photo. Lorem ipsum dolor sit
                             amet, cu soluta concludaturque vim, summo voluptatibus ex sea.</p>
                         <p><span class="username">vanek97</span> Here is a caption about the photo. Lorem ipsum dolor
-                            sit
-                            amet, cu soluta concludaturque vim, summo voluptatibus ex sea.</p>
+                            sit amet, cu soluta concludaturque vim, summo voluptatibus ex sea.</p>
                         <p><span class="comment_time">1 DAY AGO</span></p>
                     </div>
                 </div>
@@ -138,7 +138,7 @@
                         </a>
                     </h2>
                 </div>
-                <img alt="picture of nature" src="https://picsum.photos/id/10/360/260" />
+                <img alt="picture of nature" src="https://picsum.photos/id/10/360/260"/>
                 <div>
                     <p>
                         <a class="far fa-heart invisibleLink" href="#"></a>
@@ -149,16 +149,14 @@
                     <p class="likesCount">30 likes</p>
                     <p>
                         <span class="username">gibsonjack</span> Here is a caption about the photo. Lorem ipsum dolor
-                        sit
-                        amet, cu soluta concludaturque vim, summo voluptatibus ex sea...
+                        sit amet, cu soluta concludaturque vim, summo voluptatibus ex sea...
                         <a href="#">more</a>
                     </p>
                     <div class="comments">
                         <p><span class="username">lizzie</span> Here is a caption about the photo. Lorem ipsum dolor sit
                             amet, cu soluta concludaturque vim, summo voluptatibus ex sea.</p>
                         <p><span class="username">vanek97</span> Here is a caption about the photo. Lorem ipsum dolor
-                            sit
-                            amet, cu soluta concludaturque vim, summo voluptatibus ex sea.</p>
+                            sit amet, cu soluta concludaturque vim, summo voluptatibus ex sea.</p>
                         <p><span class="comment_time">1 DAY AGO</span></p>
                     </div>
                 </div>
@@ -179,7 +177,7 @@
                         </a>
                     </h2>
                 </div>
-                <img alt="picture of nature" src="https://picsum.photos/id/10/360/260" />
+                <img alt="picture of nature" src="https://picsum.photos/id/10/360/260"/>
                 <div>
                     <p>
                         <a class="far fa-heart invisibleLink" href="#"></a>
@@ -190,16 +188,14 @@
                     <p class="likesCount">30 likes</p>
                     <p>
                         <span class="username">gibsonjack</span> Here is a caption about the photo. Lorem ipsum dolor
-                        sit
-                        amet, cu soluta concludaturque vim, summo voluptatibus ex sea...
+                        sit amet, cu soluta concludaturque vim, summo voluptatibus ex sea...
                         <a href="#">more</a>
                     </p>
                     <div class="comments">
                         <p><span class="username">lizzie</span> Here is a caption about the photo. Lorem ipsum dolor sit
                             amet, cu soluta concludaturque vim, summo voluptatibus ex sea.</p>
                         <p><span class="username">vanek97</span> Here is a caption about the photo. Lorem ipsum dolor
-                            sit
-                            amet, cu soluta concludaturque vim, summo voluptatibus ex sea.</p>
+                            sit amet, cu soluta concludaturque vim, summo voluptatibus ex sea.</p>
                         <p><span class="comment_time">1 DAY AGO</span></p>
                     </div>
                 </div>
@@ -212,17 +208,24 @@
                 </div>
             </div>
         </div>
-
-
+    </div>
         <div class="sidePanel">
             <div class="currUser">
-                <img src="https://picsum.photos/100" style="border-radius: 50%;" />
-                <h1 style="margin-left: 12px;">gibsonjack</h1>
+                <h1><img alt="gibsonjack Avatar" src="https://picsum.photos/60"
+                         style="border-radius: 50%; margin-right: 10px;"/> gibsonjack</h1>
             </div>
             <div>
                 <p style="color: gray; font-weight: bold;">Suggestions for you</p>
                 <div class="suggestedUsers">
-                    <img style="height: 50px; border-radius: 50%;" src="https://picsum.photos/50/50" />
+                    <img alt="NaSakiko Avatar" src="https://picsum.photos/50/50"/>
+                    <div>
+                        <span class="username">NaSakiko</span><br>
+                        <span style="color: gray;">Suggested for you</span>
+                    </div>
+                    <a href="#" style="float:right;">follow</a>
+                </div>
+                <div class="suggestedUsers">
+                    <img alt="lizzie Avatar" src="https://picsum.photos/60/60"/>
                     <div>
                         <span class="username">lizzie</span><br>
                         <span style="color: gray;">Suggested for you</span>
@@ -230,42 +233,35 @@
                     <a href="#" style="float:right;">follow</a>
                 </div>
                 <div class="suggestedUsers">
-                    <img style="height: 50px; border-radius: 50%;" src="https://picsum.photos/60/60" />
+                    <img alt="petergip Avatar" src="https://picsum.photos/70/70"/>
                     <div>
-                        <span class="username">lizzie</span><br>
+                        <span class="username">petergip</span><br>
                         <span style="color: gray;">Suggested for you</span>
                     </div>
                     <a href="#" style="float:right;">follow</a>
                 </div>
                 <div class="suggestedUsers">
-                    <img style="height: 50px; border-radius: 50%;" src="https://picsum.photos/70/70" />
+                    <img alt="fazewsd Avatar" src="https://picsum.photos/80/80"/>
                     <div>
-                        <span class="username">lizzie</span><br>
+                        <span class="username">fazewsd</span><br>
                         <span style="color: gray;">Suggested for you</span>
                     </div>
                     <a href="#" style="float:right;">follow</a>
                 </div>
                 <div class="suggestedUsers">
-                    <img style="height: 50px; border-radius: 50%;" src="https://picsum.photos/80/80" />
+                    <img alt="eiscmds Avatar" src="https://picsum.photos/90/90"/>
                     <div>
-                        <span class="username">lizzie</span><br>
-                        <span style="color: gray;">Suggested for you</span>
-                    </div>
-                    <a href="#" style="float:right;">follow</a>
-                </div>
-                <div class="suggestedUsers">
-                    <img style="height: 50px; border-radius: 50%;" src="https://picsum.photos/90/90" />
-                    <div>
-                        <span class="username">lizzie</span><br>
+                        <span class="username">eiscmds</span><br>
                         <span style="color: gray;">Suggested for you</span>
                     </div>
                     <a href="#" style="float:right;">follow</a>
                 </div>
             </div>
         </div>
-    </main>
-
-
+</div>
 </body>
+<!-- Solutions for users to add alt-text to image: When users are trying to send a new post,
+add a text field to allow users to write alt text other than having user go into the Advance
+setting to do so. -->
 
 </html>
